Phase 5 - Modeling Strategy

--- a/notebooks/01_data_quality_and_leakage_control.ipynb
+++ b/notebooks/01_data_quality_and_leakage_control.ipynb
@@ -4,14 +4,20 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Phase 1: Data Understanding & Leakage Control\n",
+                "# Phase 1: Data Quality & Leakage Control\n",
+                "**Purpose:**  \n",
+                "- Understand dataset structure and metadata  \n",
+                "- Identify and remove data leakage columns  \n",
+                "- Perform full data cleaning (missing values, duplicates, type coercion, logical validation)  \n",
+                "- Output: `step1_quality_checked.csv`\n",
                 "## Step 1.1: Load & Inspect\n",
+                "\n",
                 "In this notebook, we load the raw dataset, inspect its structure, types, and check for class imbalance."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 75,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -42,7 +48,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 76,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -654,7 +660,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 77,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -708,7 +714,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 78,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -836,7 +842,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 79,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -1002,7 +1008,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 80,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -1058,7 +1064,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 81,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -1095,7 +1101,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 82,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
@@ -1120,7 +1126,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 83,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -1147,9 +1153,26 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "--- Missing Values Handling ---\n",
+                        "Columns with >80% missing: ['lastPrice', 'TP50']\n",
+                        "Dropped 2 columns with very high missing ratios.\n",
+                        "✅ All missing values handled. Max remaining NaNs: 0.00%\n",
+                        "✅ Final cleaned dataset saved to: E:\\AI Trading Signal Prediction\\AI-Trading-Signal-Prediction\\data\\processed\\step1_clean_final.csv\n",
+                        "\n",
+                        "Dropped columns summary:\n",
+                        " - lastPrice\n",
+                        " - TP50\n"
+                    ]
+                }
+            ],
             "source": [
                 "# =============================================================\n",
                 "# Step 1.3: Missing Values Handling\n",
@@ -1202,9 +1225,45 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "--- Step 1.4: Data Integrity & Consistency Check ---\n",
+                        "🔍 Found 0 duplicate rows.\n",
+                        "✅ No duplicate rows found.\n",
+                        "✅ No duplicate IDs found.\n",
+                        "\n",
+                        "--- Column Type Summary ---\n",
+                        "float64           35\n",
+                        "int64              8\n",
+                        "object             8\n",
+                        "datetime64[ns]     1\n",
+                        "Name: count, dtype: int64\n",
+                        "Checked potential numeric conversions for 8 object columns.\n",
+                        " Successfully converted 0 columns to numeric: []\n",
+                        "\n",
+                        "--- Top 5 Numeric Columns by Outlier Ratio (% of rows) ---\n",
+                        "price_3day_before_high     20.88\n",
+                        "price_1day_before_high     20.62\n",
+                        "price_1day_before_open     20.61\n",
+                        "price_3day_before_close    20.61\n",
+                        "price_1day_before_low      20.61\n",
+                        "price_1day_before_close    20.57\n",
+                        "price_3day_before_low      20.54\n",
+                        "price_3day_before_open     20.53\n",
+                        "target_hit                 20.46\n",
+                        "sl5                        19.37\n",
+                        "dtype: float64\n",
+                        "\n",
+                        "✅ Quality-checked dataset saved to: E:\\AI Trading Signal Prediction\\AI-Trading-Signal-Prediction\\data\\processed\\step1_quality_checked.csv\n"
+                    ]
+                }
+            ],
             "source": [
                 "# =============================================================\n",
                 "# Step 1.4: Data Integrity & Consistency Check\n",
@@ -1212,7 +1271,7 @@
                 "\n",
                 "print(\"\\n--- Step 1.4: Data Integrity & Consistency Check ---\")\n",
                 "\n",
-                "# 1️⃣ Duplicate Check (exact row duplicates)\n",
+                "# 1️. Duplicate Check (exact row duplicates)\n",
                 "dup_count = df_cleaned.duplicated().sum()\n",
                 "print(f\"🔍 Found {dup_count} duplicate rows.\")\n",
                 "\n",
@@ -1222,7 +1281,7 @@
                 "else:\n",
                 "    print(\"✅ No duplicate rows found.\")\n",
                 "\n",
-                "# 2️⃣ Check for duplicated IDs (if 'id' column exists)\n",
+                "# 2️. Check for duplicated IDs (if 'id' column exists)\n",
                 "if \"id\" in df_cleaned.columns:\n",
                 "    id_dupes = df_cleaned[\"id\"].duplicated().sum()\n",
                 "    if id_dupes > 0:\n",
@@ -1230,7 +1289,7 @@
                 "    else:\n",
                 "        print(\"✅ No duplicate IDs found.\")\n",
                 "\n",
-                "# 3️⃣ Data Type Sanity Check\n",
+                "# 3️. Data Type Sanity Check\n",
                 "print(\"\\n--- Column Type Summary ---\")\n",
                 "print(df_cleaned.dtypes.value_counts())\n",
                 "\n",
@@ -1239,13 +1298,17 @@
                 "if object_cols:\n",
                 "    for col in object_cols:\n",
                 "        try:\n",
-                "            df_cleaned[col] = pd.to_numeric(df_cleaned[col], errors='ignore')\n",
-                "        except Exception:\n",
-                "            pass\n",
+                "            df_cleaned[col] = pd.to_numeric(df_cleaned[col])\n",
+                "        except (ValueError, TypeError):\n",
+                "            continue\n",
                 "    print(f\"Checked potential numeric conversions for {len(object_cols)} object columns.\")\n",
+                "    converted_cols = [\n",
+                "    col for col in object_cols\n",
+                "    if pd.api.types.is_numeric_dtype(df_cleaned[col])\n",
+                "    ]\n",
+                "    print(f\" Successfully converted {len(converted_cols)} columns to numeric: {converted_cols}\")\n",
                 "\n",
-                "# 4️⃣ Basic Outlier Check on numeric columns\n",
-                "import numpy as np\n",
+                "# 4. Basic Outlier Check on numeric columns\n",
                 "num_cols = df_cleaned.select_dtypes(include=np.number).columns\n",
                 "outlier_stats = {}\n",
                 "\n",
@@ -1257,20 +1320,38 @@
                 "    outlier_stats[col] = outlier_ratio\n",
                 "\n",
                 "# Print top 5 columns with highest outlier ratio\n",
-                "outlier_report = pd.Series(outlier_stats).sort_values(ascending=False).head(5).round(2)\n",
+                "outlier_report = pd.Series(outlier_stats).sort_values(ascending=False).head(10).round(2)\n",
                 "print(\"\\n--- Top 5 Numeric Columns by Outlier Ratio (% of rows) ---\")\n",
                 "print(outlier_report)\n",
                 "\n",
-                "# 5️⃣ Save post-quality dataset\n",
+                "# 5.Sanity checks for OHLC\n",
+                "mask_invalid = (\n",
+                "    (df_cleaned['high'] < df_cleaned[['open','close','low']].max(axis=1)) |\n",
+                "    (df_cleaned['low'] > df_cleaned[['open','close','high']].min(axis=1)) |\n",
+                "    (df_cleaned['close'] <= 0) | (df_cleaned['open'] <= 0)\n",
+                ")\n",
+                "if mask_invalid.any():\n",
+                "    print(f\"⚠️ Removing {mask_invalid.sum()} rows with invalid OHLC structure.\")\n",
+                "    df_cleaned = df_cleaned[~mask_invalid]\n",
+                "\n",
+                "# 6. Save post-quality dataset\n",
                 "quality_checked_path = PROCESSED_DATA_DIR / \"step1_quality_checked.csv\"\n",
                 "df_cleaned.to_csv(quality_checked_path, index=False)\n",
+                "\n",
                 "print(f\"\\n✅ Quality-checked dataset saved to: {quality_checked_path}\")"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": ".venv",
             "language": "python",
             "name": "python3"
         },
@@ -1284,7 +1365,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.5"
+            "version": "3.12.4"
         }
     },
     "nbformat": 4,
