Update Preprocessing & Model Training &  Evaluation

--- a/notebooks/01_data_quality_and_leakage_control.ipynb
+++ b/notebooks/01_data_quality_and_leakage_control.ipynb
@@ -17,7 +17,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
@@ -48,7 +48,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
                 {
@@ -660,7 +660,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [
                 {
@@ -714,51 +714,14 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 20,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "✅ Datetime columns fixed and 'time_to_event' calculated.\n",
-                        "\n",
-                        "--- Targets Overview ---\n",
-                        "# Unique target_hit classes: 2, stop_hit: 2\n",
-                        "   target_hit  stop_hit\n",
-                        "0           1         0\n",
-                        "1           0         1\n",
-                        "2           0         1\n",
-                        "3           1         0\n",
-                        "4           0         1\n",
-                        "\n",
-                        "--- Sample time_to_event ---\n",
-                        "           created_at                        hit_at  \\\n",
-                        "0 2024-03-14 07:44:59 2024-03-14 13:44:59.999000072   \n",
-                        "1 2024-03-14 07:45:26 2024-03-14 13:59:59.999000072   \n",
-                        "2 2024-03-14 07:45:28 2024-03-14 13:59:59.999000072   \n",
-                        "3 2024-03-14 07:45:32 2024-03-14 13:44:59.999000072   \n",
-                        "4 2024-03-14 07:45:43 2024-03-14 13:59:59.999000072   \n",
-                        "\n",
-                        "                      closed_at  time_to_event  \n",
-                        "0 2024-03-14 08:34:59.999000072     360.016650  \n",
-                        "1 2024-03-14 08:54:59.999000072     374.566650  \n",
-                        "2 2024-03-14 18:49:59.999000072     374.533317  \n",
-                        "3 2024-03-14 09:04:59.999000072     359.466650  \n",
-                        "4 2024-03-15 20:54:59.999000072     374.283317  \n",
-                        "\n",
-                        "--- time_to_event Stats ---\n",
-                        "count     64464.00\n",
-                        "mean      14791.01\n",
-                        "std       23202.60\n",
-                        "min           5.42\n",
-                        "25%        1457.75\n",
-                        "50%        3916.91\n",
-                        "75%       30434.27\n",
-                        "90%       35175.59\n",
-                        "95%       35774.37\n",
-                        "max      458653.65\n",
-                        "Name: time_to_event, dtype: float64\n"
+                        "Error: 'hit_first' column missing — cannot derive targets.\n"
                     ]
                 }
             ],
@@ -769,7 +732,21 @@
                 "\n",
                 "if 'hit_first' in df.columns:\n",
                 "    # --- Normalize hit_first values ---\n",
-                "    df[\"hit_first\"] = pd.to_numeric(df[\"hit_first\"], errors='coerce')\n",
+                "    df[\"hit_first\"] = pd.to_numeric(df[\"hit_first\"], errors=\"coerce\")\n",
+                "\n",
+                "    # Remove trades with missing hit_first (incomplete or not labeled yet)\n",
+                "    before_rows = len(df)\n",
+                "    df = df[~df[\"hit_first\"].isna()].copy().reset_index(drop=True)\n",
+                "    removed_nans = before_rows - len(df)\n",
+                "    if removed_nans > 0:\n",
+                "        pct_nan = removed_nans / before_rows * 100\n",
+                "        print(f\"Removed {removed_nans} rows ({pct_nan:.2f}%) with NaN hit_first.\")\n",
+                "\n",
+                "    # Remove unresolved trades (class 2 = still open / unknown result)\n",
+                "    if df[\"hit_first\"].isin([2]).any():\n",
+                "        unresolved = df[df[\"hit_first\"] == 2]\n",
+                "        print(f\"Removed {len(unresolved)} unresolved trades (hit_first == 2).\")\n",
+                "        df = df[df[\"hit_first\"] != 2].copy().reset_index(drop=True)\n",
                 "\n",
                 "    # 1. Create target_hit based on hit_first == 1 (Confirmed Win)\n",
                 "    df[\"target_hit\"] = (df[\"hit_first\"] == 1).astype(int)\n",
@@ -792,6 +769,9 @@
                 "        # Set stop_hit to 1 ONLY if NOT a target hit\n",
                 "        # This prevents false positives where SL data exists but TP was hit first.\n",
                 "        df.loc[(df[\"target_hit\"] == 0) & sl_mask, \"stop_hit\"] = 1\n",
+                "\n",
+                "    removed_pct = len(unresolved) / (len(df) + len(unresolved)) * 100\n",
+                "    print(f\"📉 Removed {removed_pct:.2f}% of dataset as unresolved trades.\")\n",
                 "\n",
                 "    # --- Fix timestamps (created, hit, closed) ---\n",
                 "    for col in [\"created_at\", \"hit_at\", \"closed_at\"]:\n",
@@ -825,6 +805,9 @@
                 "\n",
                 "\n",
                 "    # --- Summary outputs ---\n",
+                "    # Assertion at the end\n",
+                "    assert not ((df[\"target_hit\"] == 1) & (df[\"stop_hit\"] == 1)).any(), \\\n",
+                "        \"Overlap between target_hit and stop_hit detected!\"\n",
                 "    print(\"\\n--- Targets Overview ---\")\n",
                 "    print(f\"# Unique target_hit classes: {df['target_hit'].nunique()}, \"\n",
                 "          f\"stop_hit: {df['stop_hit'].nunique()}\")\n",
@@ -842,7 +825,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 21,
             "metadata": {},
             "outputs": [
                 {
@@ -886,13 +869,13 @@
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>60483</td>\n",
-                            "      <td>79.54</td>\n",
+                            "      <td>37105</td>\n",
+                            "      <td>70.46</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
                             "      <td>15554</td>\n",
-                            "      <td>20.46</td>\n",
+                            "      <td>29.54</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -901,8 +884,8 @@
                         "text/plain": [
                             "            Count  Percentage\n",
                             "target_hit                   \n",
-                            "0           60483       79.54\n",
-                            "1           15554       20.46"
+                            "0           37105       70.46\n",
+                            "1           15554       29.54"
                         ]
                     },
                     "metadata": {},
@@ -950,12 +933,12 @@
                             "    <tr>\n",
                             "      <th>0</th>\n",
                             "      <td>51458</td>\n",
-                            "      <td>67.67</td>\n",
+                            "      <td>97.72</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>24579</td>\n",
-                            "      <td>32.33</td>\n",
+                            "      <td>1201</td>\n",
+                            "      <td>2.28</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -964,8 +947,8 @@
                         "text/plain": [
                             "          Count  Percentage\n",
                             "stop_hit                   \n",
-                            "0         51458       67.67\n",
-                            "1         24579       32.33"
+                            "0         51458       97.72\n",
+                            "1          1201        2.28"
                         ]
                     },
                     "metadata": {},
@@ -1008,7 +991,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 22,
             "metadata": {},
             "outputs": [
                 {
@@ -1017,16 +1000,7 @@
                     "text": [
                         "\n",
                         "Potential Leakage Columns Found:\n",
-                        " - hit_first\n",
-                        " - hit_at\n",
-                        " - TP1_closed_at\n",
-                        " - sl3_at\n",
-                        " - sl5_at\n",
-                        " - sl10_at\n",
-                        " - closed_at\n",
-                        " - after_3days\n",
-                        " - current_price\n",
-                        "Total potential leak columns: 9\n",
+                        "Total potential leak columns: 0\n",
                         "\n",
                         "✅ Leakage columns report saved to E:\\AI Trading Signal Prediction\\AI-Trading-Signal-Prediction\\logs\\leakage_features_report.txt\n"
                     ]
@@ -1064,7 +1038,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 23,
             "metadata": {},
             "outputs": [
                 {
@@ -1073,7 +1047,7 @@
                     "text": [
                         "\n",
                         "Dropping confirmed leakage columns...\n",
-                        "Dropped 9 columns. New shape: (76037, 54)\n",
+                        "Dropped 0 columns. New shape: (52659, 54)\n",
                         "✅ All confirmed leaks removed.\n"
                     ]
                 }
@@ -1101,7 +1075,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 24,
             "metadata": {},
             "outputs": [
                 {
@@ -1126,7 +1100,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 25,
             "metadata": {},
             "outputs": [
                 {
@@ -1153,7 +1127,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 26,
             "metadata": {},
             "outputs": [
                 {
@@ -1162,14 +1136,15 @@
                     "text": [
                         "\n",
                         "--- Missing Values Handling ---\n",
-                        "Columns with >80% missing: ['lastPrice', 'TP50']\n",
-                        "Dropped 2 columns with very high missing ratios.\n",
+                        "Columns with >80% missing: ['lastPrice', 'TP50', 'TP45']\n",
+                        "Dropped 3 columns with very high missing ratios.\n",
                         "✅ All missing values handled. Max remaining NaNs: 0.00%\n",
                         "✅ Final cleaned dataset saved to: E:\\AI Trading Signal Prediction\\AI-Trading-Signal-Prediction\\data\\processed\\step1_clean_final.csv\n",
                         "\n",
                         "Dropped columns summary:\n",
                         " - lastPrice\n",
-                        " - TP50\n"
+                        " - TP50\n",
+                        " - TP45\n"
                     ]
                 }
             ],
@@ -1225,7 +1200,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 27,
             "metadata": {},
             "outputs": [
                 {
@@ -1239,7 +1214,7 @@
                         "✅ No duplicate IDs found.\n",
                         "\n",
                         "--- Column Type Summary ---\n",
-                        "float64           35\n",
+                        "float64           34\n",
                         "int64              8\n",
                         "object             8\n",
                         "datetime64[ns]     1\n",
@@ -1248,16 +1223,16 @@
                         " Successfully converted 0 columns to numeric: []\n",
                         "\n",
                         "--- Top 5 Numeric Columns by Outlier Ratio (% of rows) ---\n",
-                        "price_3day_before_high     20.88\n",
-                        "price_1day_before_high     20.62\n",
-                        "price_1day_before_open     20.61\n",
-                        "price_3day_before_close    20.61\n",
-                        "price_1day_before_low      20.61\n",
-                        "price_1day_before_close    20.57\n",
-                        "price_3day_before_low      20.54\n",
-                        "price_3day_before_open     20.53\n",
-                        "target_hit                 20.46\n",
-                        "sl5                        19.37\n",
+                        "rsi_3d                     23.81\n",
+                        "sl3                        23.08\n",
+                        "price_3day_before_open     22.75\n",
+                        "price_1day_before_open     22.75\n",
+                        "price_1day_before_high     22.75\n",
+                        "price_1day_before_low      22.75\n",
+                        "price_3day_before_high     22.75\n",
+                        "price_3day_before_low      22.75\n",
+                        "price_3day_before_close    22.75\n",
+                        "price_1day_before_close    22.75\n",
                         "dtype: float64\n",
                         "\n",
                         "✅ Quality-checked dataset saved to: E:\\AI Trading Signal Prediction\\AI-Trading-Signal-Prediction\\data\\processed\\step1_quality_checked.csv\n"
